test/test-cases/negative/operation_errors.pas

Program operation_errors(input, output);

Var x,y,z: integer;
Begin
  x := 0;
  y := 1;
  // 缺少运算对象
  z := x + ;
  // 运算符缺失
  z := x y;
  // 括号不匹配
  z := (x+y;
  read(x, y)
End.
